# FP_Hallucination

./: .gitignore  curate_model_dataset.sh  download_model.py  environment.yml  pyproject.toml  requirements.txt  run_minicheck.py  run_model.py  run_model.sh  run_model_gemini.sh  run_model_killarney.sh  run_model_nlp.sh  run_model_openai.sh  run_model_sockeye.sh  test.py
bert_score/: scorer.py
data_gen/: curate_model_dataset.py  data_loader.py  false_premise_gen.py  false_premise_gen_agent.py  false_premise_gen_prompts.py  false_premise_valid.py  nobel_prize_fp_gen.py  template.py
data_gen/CREPE/: download_raw_data.sh  few_shot.jsonl
data_gen/QA2/: preprocess.py
data_gen/biographies/: gen_biographies.py
data_gen/books/: get_books.py
data_gen/data_loader/: CREPE_loader.py  __init__.py  data_loader.py  wikidata_loader.py
data_gen/movies/: get_movies.py  templates.py
data_gen/template/: CREPE_template.py  __init__.py  direct_QA_template.py  movies_template.py  template.py
data_gen/wikidata/: get_wikidata_books.py  get_wikidata_movies.py  get_wikidata_relations.py  wikidata_test.py
data_gen/wikidata/movies/: gen_movies_fp.py  get_movies.py  templates.py
data_operator/: CREPE_operator.py  __init__.py  data_operator.py
evaluator/: CREPE_evaluator.py  __init__.py  evaluator.py  utils.py
interpretability/attention_managers/: __init__.py  manager_item.py
interpretability/fv_maps/: __init__.py
interpretability/models/llama/: modeling_llama.py
interpretability/operators/: __init__.py  operator.py
interpretability/tokenizers/: tokenizer.py
minicheck_operator/: CREPE_minicheck_operator.py  __init__.py  minicheck_operator.py
response/: CREPE_response.py  __init__.py  response.py
