[project]
name = "fp-hallucination"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.11.0",
    "aiohappyeyeballs>=2.6.1",
    "aiohttp>=3.13.2",
    "aiosignal>=1.4.0",
    "annotated-types>=0.7.0",
    "anyio>=4.11.0",
    "attrs>=25.4.0",
    "bert-score>=0.3.13",
    "certifi>=2025.10.5",
    "charset-normalizer>=3.4.4",
    "cloudpickle>=3.1.2",
    "contourpy>=1.3.2",
    "cycler>=0.12.1",
    "datasets>=4.4.1",
    "dill>=0.4.0",
    "diskcache>=5.6.3",
    "distro>=1.9.0",
    "evaluate>=0.4.6",
    "filelock>=3.20.0",
    "fonttools>=4.60.1",
    "frozenlist>=1.8.0",
    "fsspec>=2025.10.0",
    "h11>=0.16.0",
    "hf-xet>=1.2.0",
    "httpcore>=1.0.9",
    "httpx>=0.28.1",
    "huggingface-hub>=0.36.0",
    "idna>=3.11",
    "interegular>=0.3.3",
    "jinja2>=3.1.6",
    "jiter>=0.12.0",
    "jsonschema>=4.25.1",
    "jsonschema-specifications>=2025.9.1",
    "kiwisolver>=1.4.9",
    "lark>=1.3.1",
    "llvmlite>=0.45.1",
    "markupsafe>=3.0.3",
    "matplotlib>=3.10.7",
    "mpmath>=1.3.0",
    "multidict>=6.7.0",
    "multiprocess>=0.70.18",
    "nest-asyncio>=1.6.0",
    "networkx>=3.4.2",
    "numba>=0.62.1",
    "numpy>=2.2.6",
    "nvidia-cublas-cu12>=12.9.1.4",
    "nvidia-cuda-cupti-cu12>=12.9.79",
    "nvidia-cuda-nvrtc-cu12>=12.9.86",
    "nvidia-cuda-runtime-cu12>=12.9.79",
    "nvidia-cudnn-cu12>=9.15.0.57",
    "nvidia-cufft-cu12>=11.4.1.4",
    "nvidia-cufile-cu12>=1.14.1.1",
    "nvidia-curand-cu12>=10.3.10.19",
    "nvidia-cusolver-cu12>=11.7.5.82",
    "nvidia-cusparse-cu12>=12.5.10.65",
    "nvidia-cusparselt-cu12>=0.8.1",
    "nvidia-nccl-cu12>=2.28.7",
    "nvidia-nvjitlink-cu12>=12.9.86",
    "nvidia-nvshmem-cu12>=3.4.5",
    "nvidia-nvtx-cu12>=12.9.79",
    "openai>=2.7.2",
    "outlines>=1.2.8",
    "packaging>=25.0",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "propcache>=0.4.1",
    "psutil>=7.1.3",
    "pyarrow>=22.0.0",
    "pydantic>=2.12.4",
    "pydantic-core>=2.41.5",
    "pyparsing>=3.2.5",
    "python-dateutil>=2.9.0.post0",
    "pytorch-ignite>=0.5.3",
    "pytz>=2025.2",
    "pyyaml>=6.0.3",
    "referencing>=0.37.0",
    "regex>=2025.11.3",
    "requests>=2.32.5",
    "rpds-py>=0.28.0",
    "safetensors>=0.6.2",
    "setuptools>=80.9.0",
    "six>=1.17.0",
    "sniffio>=1.3.1",
    "sympy>=1.14.0",
    "tokenizers>=0.22.1",
    "torch>=2.0.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "triton>=3.5.0",
    "typing-extensions>=4.15.0",
    "typing-inspection>=0.4.2",
    "tzdata>=2025.2",
    "urllib3>=2.5.0",
    "xxhash>=3.6.0",
    "yarl>=1.22.0",
]
